--- a/README.Rmd
+++ b/README.Rmd
@@ -6,22 +6,18 @@ This package compiles a series of time-stamped phylogenies, to be shared during 
 Data can be provided as R objects (loaded automatically when loading the package), text files distributed alongside the package (e.g. Newick strings), or functions generating a dataset.
 
 The following R datasets are currently available:
+```{r hidden, echo=FALSE}
+if(!require(printr)) warning("printr is not installed; displaying the content of 'data(...)' may not work")
+```
 
-
-
-```r
+```{r datalist}
 data(package="timetrees")
-```
-
-```
-## Error in find.package(package, lib.loc, verbose = verbose): there is no package called 'timetrees'
 ```
 
 # Installing the package
 
 To install the devel version of the package, type:
-
-```r
+```{r install, eval=FALSE}
 devtools::install_github("Hackout3/timetrees")
 ```
 
